--- a/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
@@ -20,7 +20,7 @@
                                 @*【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景*@
                                 @item.TravelProductName
                             </h3>
-                        </a>-
+                        </a>
                         <div class="page-activity-recommend-score">
                             <span class="page-activity-recommend-score-number">
                                 <svg width="12" height="12" class="svg-icon"></svg>
@@ -35,7 +35,7 @@
                         <div class="activity-card-bottom">
                             <div>
                                 <div class="activity-card-price-box home-activity-card_price small-card">
-                                    <span class="activity-card-price-box__sell-price dynamic-width-price">@item.Price.ToString("###,###,##0")</span>
+                                    <span class="activity-card-price-box__sell-price dynamic-width-price">NT: @item.Price.ToString("###,###,##0")</span>
                                     @*<span class="activity-card-price-box__underline-price dynamic-width-price"></span>*@
                                 </div>
                             </div>
